  errors that had been logged and swallowed by privious versions. The new
  enableRuntimeExceptions() method of ConfigurationUtils registers a special
  error listener at the passed in configuration that generates a runtime
  exception when an error event is received.

CHANGES THAT MIGHT IMPACT EXISTING CODE:
========================================

* [CONFIGURATION-234]
  DefaultConfigurationBuilder now internally uses the standard expression
  engine for hierarchical configurations. So the dependency to Commons JXPath
  is no more needed when this class is used. Note that this change has some
  impact on exist ing code that manually sets properties before the combined
  configuration is created; this code must now be adapted to the changed
  syntax of property keys.

* [CONFIGURATION-242]
  The configuration returned by HierarchicalConfiguration.subset() performed
  variable interpolation only in the keys that belong to the subset. Now the
  parent configuration is searched, too, to resolve the value of the
  referenced property. This is consistent with the way SubnodeConfiguration
  works, but it slightly changes the behavior of interpolation for
  configurations that are loaded by DefaultConfigurationBuilder and are
  stored in the resulting CombinedConfiguration under a prefix. If a
  subset is fetched for this prefix, in version 1.3 variables could be
  resolved that belong to the same subset. This does not work any more in
  version 1.4

OTHER CHANGES
=============

* AbstractConfiguration now allows to set an instance specific logger using
  the setLogger() method. This gives clients more control over a
  configuration's logging behavior.

* Commons Configuration now depends on Commons Lang 2.2. Some features of
  Lang's new text package are used.

* The dependencies to Commons Collections and Commons Digester are updated to
  use the recent available version. However older versions will still work.

* A pom for maven 2 was added.